--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # データベースの URL（ファイルモード）
-spring.datasource.url=jdbc:h2:file:C:/Users/1Java30/Desktop/DB;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:file:C:/Users/1Java30/Desktop/DB
 
 # H2 のユーザー名とパスワード
 spring.datasource.username=sa
@@ -13,3 +13,8 @@ spring.jpa.hibernate.ddl-auto=update
 # H2コンソール有効化（開発中に便利）
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+spring.mvc.view.prefix=/templates/
+spring.mvc.view.suffix=.html
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
