2回目コミット修正5/16

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-spring.mvc.view.prefix=/templates/
-spring.mvc.view.suffix=.html
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+# 開発中はテンプレートキャッシュOFFが便利
+spring.thymeleaf.cache=false
+# （デフォルトtrue。明示してもOK）
+spring.thymeleaf.enabled=true
