--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+            <version>3.1.1.RELEASE</version>
         </dependency>
 
         <!-- JPA + H2 -->
